# limitless

./: .editorconfig  .gitignore  .yamllint.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  SUPPORT.md  codecov.yml  conanfile.py  limitless.h  limitless.hpp
.claude/: settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  dependency-review.yml  fuzz.yml  gitleaks.yml  release.yml  reusable-build-test.yml  scorecard.yml  static-analysis.yml
_codeql_build_dir/: CMakeCache.txt  LimitlessConfig.cmake  Makefile  cmake_install.cmake  limitless.pc
cmake/: LimitlessConfig.cmake.in
docs/: ARCHITECTURE.md  INVARIANTS.md  MIGRATION_CPP_NAMESPACE.md  RELEASE_CHECKLIST.md  THREAD_SAFETY.md
packaging/pkgconfig/: limitless.pc.in
packaging/vcpkg/ports/limitless/: portfile.cmake  vcpkg.json
tests/: gen_vectors.py  generated_core_vectors.inc  generated_cpp_vectors.inc  multi_a.c  multi_b.c  multi_cpp_a.cpp  multi_cpp_b.cpp  multi_cpp_impl.cpp  multi_impl.c  test_cpp_legacy_bridge.cpp  test_cpp_namespace_strict.cpp  test_default_allocator_override.c  test_include_repo_root.cpp  test_limitless.c  test_limitless_allocator_contract.c  test_limitless_api.c  test_limitless_branch_coverage.c  test_limitless_conversion_edges.c  test_limitless_cpp.cpp  test_limitless_cpp_branch_coverage.cpp  test_limitless_cpp_cross_thread_status.cpp  test_limitless_cpp_generated.cpp  test_limitless_cpp_minmax.cpp  test_limitless_generated.c  test_limitless_invariants.c  test_limitless_minmax.c  test_limitless_parse_edges.c  test_limitless_parser_fuzz.c  test_limitless_threads.cpp  test_limitless_threads_c_api.cpp
tests/bench/: bench_bigint_mul.c  bench_div.c  bench_parse_format.c  bench_pow_modexp.c
tests/bench/baseline/: linux-gcc13.json
tests/ci/: apt_prepare_ubuntu.sh  check_spdx_headers.sh  diff_reference.py  limitless_cli.c  packaging_smoke.sh  run_bench_regression.sh  run_clang_analyze.sh  run_clang_tidy.sh  run_coverage.sh  run_cppcheck.sh  run_differential.sh  run_fuzz_smoke.sh  run_negative_compile.sh  run_repo_lint.sh  run_unix_matrix.sh  run_windows_msvc.ps1  verify_release_artifacts.sh
tests/fuzz/: fuzz_arith.cpp  fuzz_format.cpp  fuzz_parse.cpp
tests/fuzz/corpus/arith/: seed1.txt  seed2.txt
tests/fuzz/corpus/format/: seed1.txt  seed2.txt
tests/negative/: strict_legacy_symbol_fail.cpp
tools/: check_reserved_filenames.py  check_version.py  extract_changelog.py  generate_spdx_sbom.py  validate_spdx_sbom.py
